New mods, changes to old ones

--- a/Cheater/localisation/cheater_l_english.yml
+++ b/Cheater/localisation/cheater_l_english.yml
@@ -3,8 +3,8 @@
   trait_cheater_desc:0 "§LMembers of this species are cheaters.§!\n"
   edict_cheater_generic:0 "Generic cheats"
   edict_cheater_generic_desc:0 "All positive empire edict modifiers."
-  edict_cheater_influence:0 "Influence cheats"
-  edict_cheater_influence_desc:0 "Insane amounts of influence. Cheaper diplomacy and edict influence costs."
+  edict_cheater_diplomacy:0 "Diplomacy cheats"
+  edict_cheater_diplomacy_desc:0 "Everyone likes us."
   edict_cheater_research:0 "Research cheats"
   edict_cheater_research_desc:0 "Research completes in one month. Extra alternatives."
   edict_cheater_resources:0 "Resource cheats"
@@ -15,13 +15,11 @@
   edict_cheater_construction_desc:0 "All positive empire edict modifiers."
   edict_cheater_expansion:0 "Expansion cheats"
   edict_cheater_expansion_desc:0 "Colony development speed boost. Terraforming cost down. Colony influence cost down. Colonizer construction speed up and cost down."
-  edict_cheater_navy:0 "Navy cheats"
-  edict_cheater_navy_desc:0 "Navy size up. Upkeep down. Sensor range, speed, damage, fire rate, and defense up."
-  edict_cheater_army:0 "Army cheats"
-  edict_cheater_army_desc:0 "Damage, health, morale, and army build speed up. Army upkeep and build cost down."
-  edict_cheater_leaders:0 "Leaders cheats"
-  edict_cheater_leaders_desc:0 "Leader cap, exp gain, maximum age, and skill levels up. Influence cost down."
+  edict_cheater_military:0 "Military cheats"
+  edict_cheater_military_desc:0 "Woo, military buffs."
   edict_cheater_population:0 "Population cheats"
-  edict_cheater_population_desc:0 "Ethic shifts, food requirements, xenophobia, and resettlement cost down. Happiness, environment tolerance, migration speed, other species happiness, and fortification defenses up."
+  edict_cheater_population_desc:0 "People are better and happier."
   leader_trait_cheatscientist:0 "Cheater Scientist"
   leader_trait_cheatscientist_desc:0 "Boosts to sciency stuff"
+  tech_cheater_everything:0 "Cheat Tech"
+  tech_cheater_everything_desc:0 "Everything's much better."
