--- a/Cheater/localisation/cheater_l_english.yml
+++ b/Cheater/localisation/cheater_l_english.yml
@@ -9,7 +9,7 @@
   edict_cheater_research_desc:0 "Research completes in one month. Extra alternatives."
   edict_cheater_resources:0 "Resource cheats"
   edict_cheater_resources_desc:0 "Huge food, minerals, and energy production boosts. Maximum storage for energy and minerals increased."
-  edict_cheater_exloration:0 "Exploration cheats"
+  edict_cheater_exploration:0 "Exploration cheats"
   edict_cheater_exploration_desc:0 "All positive empire edict modifiers."
   edict_cheater_construction:0 "Construction cheats"
   edict_cheater_construction_desc:0 "All positive empire edict modifiers."
@@ -21,5 +21,6 @@
   edict_cheater_population_desc:0 "People are better and happier."
   leader_trait_cheatscientist:0 "Cheater Scientist"
   leader_trait_cheatscientist_desc:0 "Boosts to sciency stuff"
+  leader_trait_cheatscientist_tooltip:0 "Pretty cheaty scientist."
   tech_cheater_everything:0 "Cheat Tech"
   tech_cheater_everything_desc:0 "Everything's much better."
