--- a/Cheater/localisation/cheater_l_english.yml
+++ b/Cheater/localisation/cheater_l_english.yml
@@ -24,3 +24,5 @@
   leader_trait_cheatscientist_tooltip:0 "Pretty cheaty scientist."
   tech_cheater_everything:0 "Cheat Tech"
   tech_cheater_everything_desc:0 "Everything's much better."
+  cheater_modifier:0 "Cheats!"
+  cheater_modifier_desc:0 "Cheat everything!"
